k8s/dataSaver.yaml
# 3. Deployment: 애플리케이션 배포 명세
# Deployment는 우리 애플리케이션(Pod)이 항상 정상적으로 실행되도록 상태를 관리합니다.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-saver-deployment
spec:
  replicas: 1 # 우선 1개의 파드만 실행합니다.
  selector:
    matchLabels:
      app: session-data-saver
  template: # 여기부터가 실제 파드(컨테이너)에 대한 정의입니다.
    metadata:
      labels:
        app: session-data-saver
    spec:
      containers:
        - name: session-data-saver-container
          # 이 이미지는 Docker Hub에 푸시된 배포용 이미지를 사용해야 합니다.
          image: "hwengdeong/attention-data-saver:latest" # Docker Hub 사용자명/이미지명:태그 형식으로 입력
          imagePullPolicy: Always
          
          # envFrom을 사용하여 Secret과 ConfigMap의 모든 키-값 쌍을
          # 컨테이너의 환경 변수로 주입합니다.
