k8s/redis.yaml
# redis-manifest.yaml

# --- 1. Redis Deployment ---
# "Redis Pod는 이런 모양으로, 항상 1개를 유지해줘" 라는 설계도입니다.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: redis #
  template:
    metadata:
      labels:
        app: redis 
    spec:
      containers:
        - name: redis-container
          image: redis:alpine
          ports:
            - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379       
      targetPort: 6379
