k8s/websocket.yaml
# 2. Deployment: 웹소켓 애플리케이션 배포 명세
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-server
  template:
    metadata:
      labels:
        app: websocket-server
    spec:
      containers:
        - name: websocket-server-container
          image: "hwengdeong/attention-websocket:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 9001
---
# 3. Service: 웹소켓 파드들을 위한 내부 네트워크 엔드포인트
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
spec:
  type: ClusterIP 
  selector:
    app: websocket-server 
  ports:
    - protocol: TCP
      port: 9001 
      targetPort: 9001
